# nd-arrow-array

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.md
nd-arrow-array/: Cargo.toml
nd-arrow-array/src/: array_.rs  broadcast.rs  consts.rs  dimension.rs  explode.rs  lib.rs  nd_record_batch.rs  nd_schema.rs  shape.rs  stream_reader.rs  stream_writer.rs  version.rs
nd-arrow-array/src/io/: mod.rs  parquet.rs
nd-arrow-array/src/io/parquet/: mod.rs  reader.rs  writer.rs
nd-arrow-array/src/nd_array/: arrow_backed.rs  arrow_ext.rs  chunk.rs  default.rs  dimension.rs  mod.rs  nd_array_ext.rs
nd-arrow-array/src/nd_array/chunk/: chunker.rs  compute.rs  default.rs  mod.rs
