[package]
name = "nd-arrow-array"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = {version ="=53.3.0"}
arrow-ipc = {version ="=53.3.0", features = ["zstd"] }
anyhow = "*"
ndarray = "0.16.1"
parquet = {version ="=53.3.0",features = ["arrow","async"] }
thiserror = "2.0.12"
chrono = "=0.4.35"
indexmap = "2.9.0"
bytes = "1.10.1"
tokio = "1.44.2"
futures = "0.3.31"