[package]
name = "nd-arrow-array"
version = "0.4.2"
edition = "2021"

[dependencies]
arrow = {version ="=53.3.*"}
arrow-ipc = {version ="=53.3.*", features = ["zstd"] }
anyhow = "*"
ndarray = "0.16.1"
parquet = {version ="=53.3.*",features = ["arrow","async"] }
thiserror = "2.0.12"
chrono = "=0.4.38"
indexmap = "2.9.0"
bytes = "1.10.1"
tokio = { version = "1.43.*", features = ["full"] }
futures = "0.3.31"

[dev-dependencies]
tempfile = "3.8"