[package]
name = "nd-arrow-array"
version = "0.4.6"
edition = "2021"

[dependencies]
arrow = {version ="^55.2.*"}
arrow-ipc = {version ="^55.2.*", features = ["zstd"] }
parquet = {version ="^55.2.*",features = ["arrow","async"] }
anyhow = "*"
ndarray = "0.16.1"
thiserror = "2.0.12"
chrono = "=0.4.41"
indexmap = "2.9.0"
bytes = "1.10.1"
tokio = { version = "1.43.*", features = ["full"] }
futures = "0.3.31"

[dev-dependencies]
tempfile = "3.8"